--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.0",
+    "@material-tailwind/html": "^2.3.2",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
+    "@mui/x-charts": "^7.25.0",
+    "@mui/x-data-grid": "^7.25.0",
+    "@mui/x-date-pickers": "^7.25.0",
+    "@mui/x-tree-view": "^7.25.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
