--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^7.25.0",
     "@mui/x-date-pickers": "^7.25.0",
     "@mui/x-tree-view": "^7.25.0",
+    "@tanstack/react-query": "^5.66.7",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
