--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
