--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
